--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bootstrap": "~3.3.1",
     "jquery": "~2.1.1",
+    "fitvids": "~1.1.0",
     "console.image": "*"
   }
 }
