--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "fitvids": "~1.1.0",
     "console.image": "*",
     "isotope": "~2.1.0",
-    "lodash": "~3.0.1"
+    "lodash": "~3.0.1",
+    "moment": "~2.9.0"
   }
 }
