--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "components"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.1",
+    "bootstrap": "3.3.1",
     "jquery": "~2.1.1",
     "fitvids": "~1.1.0",
     "console.image": "*",
