--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "mygamedev",
   "version": "0.0.1",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "iojs index.js"
+  },
+  "engines": {
+    "iojs": "2.3.x"
   },
   "dependencies": {
     "body-parser": "^1.4.3",
