--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install",
     "start": "iojs index.js"
   },
   "engines": {
@@ -11,6 +12,7 @@
   },
   "dependencies": {
     "body-parser": "^1.4.3",
+    "bower": "^1.4.1",
     "cookie-parser": "~1.3.2",
     "debug": "~1.0.2",
     "express": "^4.4.5",
