--- a/package.json
+++ b/package.json
@@ -11,21 +11,18 @@
     "iojs": "2.3.x"
   },
   "dependencies": {
-    "body-parser": "^1.4.3",
+    "body-parser": "^1.13.1",
     "bower": "^1.4.1",
-    "cookie-parser": "~1.3.2",
-    "debug": "~1.0.2",
-    "express": "^4.4.5",
-    "jade": "^1.3.1",
-    "morgan": "^1.1.1",
-    "serve-favicon": "^2.0.1"
+    "cookie-parser": "^1.3.5",
+    "debug": "^2.2.0",
+    "express": "^4.13.0",
+    "jade": "^1.11.0",
+    "morgan": "^1.6.0",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-develop": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "request": "~2.36.0",
-    "time-grunt": "~0.3.2",
-    "load-grunt-tasks": "~0.6.0"
+    "gulp": "^3.9.0",
+    "gulp-jade": "^1.0.1",
+    "gulp-rename": "^1.2.2"
   }
 }
